        - we now require WiringPi::API 2.3609 due to PUD/Interrupt fixes there
        - added proper interrupt and pud tests
        - in Util::cleanup(), removed the use of sudo for decommissioning pins
        - added t/README file, which specifies the GPIO pins in use for the
          unit test suite
        - added unit test section to FAQ

2.3610  2017-03-13
        - added in support in adc() to allow usage of the MCP3008 ADC from
          RPi::ADC::MCP3008 (closes #21)
        - fix typos in some module names we're including
        - added unregister_pin() again, we can now unregister pins manually
        - began process of rewriting unit tests in preparation for full blown
          automation

2.3609  2017-03-13
        - work on testing inheritance of sub modules
        - quote two-decimal prereq versions as they were not valid unquoted
        - change version scheme from 2.36.x to 2.360x in modules and prereqs

2.36.8  2017-02-22
        - we now require EUMM 6.72 to ensure multi-decimal version numbers of
          prereqs don't break things

2.36.7  2017-02-02
        - undocumented the ability to use the various wiringPi setup routines.
          The functionality is still present, we're just not going to advertise
          that it's there. The officially supported pin mapping scheme is GPIO
          (closes #16)
        - added in support for RPi::DAC::MCP4922 digital to analog converters,
          and added dac()
        - finally dumped RPi::WiringPi::BMP180 as a standalone distribution,
          RPi::BMP180 (closes #15)
        - updated copyright year from 2016 to 2017
        - added in support for RPi::DHT11 hygrometers (closes #17)
        - POD cleanup/fixes related to the work done in this release, as well as
          unrelated fixes

2.36.6  2017-01-26
        - * Notice * some functionality will be removed and/or hidden from the
          next release, due to being incompatible or just plain me desiring to